modules/network/aws_lb.tf

# ####################################################
# # ALB Security Group
# ####################################################
# resource "aws_lb" "this" {
#   name = "demo-integrated-alb"
#   load_balancer_type = "application"
#   security_groups = [
#     aws_security_group.alb.id
#   ]
#   subnets = [
#     aws_subnet.pub_subnet_1a.id,
#     aws_subnet.pub_subnet_1c.id,
#   ]
# }


# resource "aws_lb_listener" "http" {
#   load_balancer_arn = aws_lb.this.arn
#   port = "80"
#   protocol = "HTTP"
#   default_action {
#     type = "redirect"
#     redirect {
#       port = "443"
#       protocol = "HTTPS"
#       status_code = "HTTP_301"
#     }
#   }
# }

# ####################################################
# # ALB Security Group
# ####################################################
# resource "aws_security_group" "alb" {
#   name = "demo-integrated-alb"
#   description = "demo alb rule based routing"
#   vpc_id = aws_vpc.vpc.id
#   egress {
#     from_port = 0
#     protocol  = "-1"
#     to_port   = 0
#     cidr_blocks = ["0.0.0.0/0"]
#   }
#   tags = {
#     Name = "demo-integrated-alb"
#   }
# }

# resource "aws_security_group_rule" "alb_http" {
#   from_port         = 80
#   protocol          = "tcp"
#   security_group_id = aws_security_group.alb.id
#   to_port           = 80
#   type              = "ingress"
#   cidr_blocks = ["0.0.0.0/0"]
# }

# resource "aws_security_group_rule" "alb_https" {
#   from_port         = 443
#   protocol          = "tcp"
#   security_group_id = aws_security_group.alb.id
#   to_port           = 443
#   type              = "ingress"
#   cidr_blocks = ["0.0.0.0/0"]
# }
